# logtriage-env

./: .gitignore  ANALYSIS_SUMMARY.md  BLOG_POST.md  COMPLETE_SUMMARY.md  DAY1.md  DAY1_STATUS.md  DAY2.md  DAY2_STATUS.md  DAY3_STATUS.md  DAYS_1-2-3-4_FINAL_STATUS.md  DAYS_1-2_SUMMARY.md  DAYS_1-2_SUMMARY_FINAL.md  Dockerfile  EXECUTIVE_SUMMARY.md  FILE_INVENTORY.md  FINAL_CHECKLIST.md  LogTriageEnv_Training.ipynb  README.md  README_EXPLAINED.md  START_HERE.md  START_HERE_DAY2.md  STATUS.md  TEST_ENDPOINTS.md  VISUAL_SUMMARY.md  WHAT_HAS_BEEN_DONE.md  action.json  baseline.py  inference.py  merge_curves.py  openenv.yaml  pyproject.toml  requirements.txt  test_all.bat  test_day1.py  train.py
.claude/: settings.local.json
scripts/: run_grader.py
server/: app.py  environment.py  log_generator.py  models.py
server/graders/: __init__.py  base_grader.py  cascade_grader.py  crash_grader.py  noise_grader.py
server/scenarios/: cascading.py  silent_degrade.py  single_crash.py
