[project]
name = "logtriage-env"
version = "1.0.0"
description = "An OpenEnv environment where an AI agent acts as an on-call SRE diagnosing incidents from log data"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "groq>=0.5.0",
    "openenv-core>=0.2.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["server", "server.graders", "server.scenarios"]

[project.scripts]
server = "server.app:main"
